August 17. 2012

- Bug fix for data returned from the 'state' method. The 'firstStep' field contained invalid value if the first step was removed and the method 'update_steps' was called.
- Updated examples to use div elements for defining the steps. 
- Fix for issue where the wizard got "stuck" after reload (when the bbq history plugin was enabled). Thanks to thingalon.

February 26. 2011

Version 3.0.5 released. Changes:

- use eq(0) instead of first() for working towards backwards compatibility with jQuery < 1.4 
- rename the javascript file from jquery.form.wizard-3.0.4.js to jquery.form.wizard.js for easier maintenance around releases. Updated examples to refer to the new filename.
- remove initial call to this._updateHistory(this.firstStep), this to prevent firefox from hiding the favicon (due to some issue with pushState).
- delay the triggering of the "step_shown" event until the step has finished animating.
- updated example : example_11_changing_options_after_initialization.html so that the transition animation is changed in runtime
- updated example : example_4_step_shown_event.html
- updated the plugin to use console.log, if available instead of using an alert.


October 22.

Version 3.0.4 released. Changes:

- fixed initialization code so that it does not set ui styles if disableUIStyles is set to false
- Fixed bug where the only the input fields on the last step were sent to the server

October 16.

Version 3.0.3 released. Changes:

- fixed update_steps function so that it does not set ui styles if disableUIStyles is set to false
- Changed the functionality of the plugin so that the form is submitted _exactly_ like any other form, when the form plugin is disabled.
- Added 2 more examples (20 and 21)

September 26.

Version 3.0.2 released. Changes:

- disableUIStyles option added. The option can be used to keep the plugin from adding jquery.ui styling to the form.